# backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.celery  EXAMPLE.env  Makefile  README.md  Słownik _rozgrywek_ do rejestracji.xlsx - Słownik_do_rejestracji-4.csv  Untitled.ipynb  __init__.py  celeryy.py  command.py  conftest.py  docker-compose.yml  filteroptions  filteroptions_vivo  i  initialize.sh  league_filter_map.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  redirects.yaml  requirement_dev.txt  requirements.dev.txt  requirements.txt  result_herbs.txt  scp.py  seo.yaml  seo_example.yaml  setup.cfg  tasks.py  teams_map.py  tems_tot.txt  test.json  (+1 more)
__Presento/: blog-single.html  blog.html  changelog.txt  inner-page.html  portfolio-details.html
_blog/: models.py
adapters/: base_adapter.py  exceptions.py  player_adapter.py  serializers.py  strategy.py  utils.py
api/: README.md  base_view.py  consts.py  custom_throttling.py  errors.py  filters.py  i18n.py  i18n_config.py  internal_auth.py  internal_urls.py  pagination.py  schemas.py  serializers.py  services.py  swagger.yml  swagger_schemas.py  urls.py  utils.py  views.py  warp_plan.md
app/: apps.py  celery.py  context_processors.py  errors.py  mail.py  mixins.py  urls.py  utils.py
backend/: __init__.py  api.py  redirect_urls.py  sitemaps.py  urls.py  wsgi.py  x.html
clubs/: admin.py  apps.py  errors.py  filters.py  forms.py  managers.py  models.py  services.py  signals.py  urls.py  utils.py  views.py
compose/: docker-compose-pg-only.yml
connector/: commander.py  entities.py  enums.py  service.py  urls.py
constants/: seo_example.yaml  voivodeships.json
contact/: models.py
crm/: admin.py  filters.py  models.py
events/: errors.py  models.py  serializers.py  services.py  urls.py  views.py
external_links/: admin.py  apps.py  errors.py  models.py  serializers.py  services.py  signals.py  utils.py
fantasy/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
features/: admin.py  api_urls.py  api_views.py  apps.py  models.py  serializers.py  signals.py
flex/: models.py
followers/: admin.py  apps.py  errors.py  forms.py  models.py  pin_feed.py  pin_managers.py  services.py  signals.py  urls.py  utils.py  verbs.py  views.py
fqa/: admin.py  apps.py  models.py  urls.py  views.py
home/: models.py  urls.py  views.py
inquiries/: admin.py  apps.py  constants.py  context_processors.py  errors.py  models.py  plans.py  schemas.py  services.py  signals.py  tasks.py  utils.py
labels/: models.py  services.py  translations.py  utils.py
landingpage/: forms.py  urls.py  views.py
mailing/: admin.py  constants.py  default_templates.py  deprecated.py  handlers.py  models.py  schemas.py  services.py  tasks.py  utils.py
mapper/: admin.py  enums.py  models.py
marketplace/: admin.py  api.py  apps.py  filteroptions_league  forms.py  models.py  notify.py  services.py  signals.py  urls.py  utils.py  views.py
metrics/: coach.py  mappers.py  matches.py  serializers.py  team.py
middleware/: redirect_middleware.py  test_user_lastactivity.py  tests.py  user_activity_middleware.py
news/: models.py
newsletter_WIP/: models.py
notifications/: __init__.py  admin.py  apps.py  base.py  forms.py  html.py  mail.py  mass.py  message.py  models.py  services.py  signals.py  tasks.py  templates.py  utils.py
payments/: admin.py  logging.py  models.py  schemas.py  services.py
plays/: admin.py  models.py  urls.py  views.py
premium/: admin.py  api_views.py  apps.py  models.py  serializers.py  (+5 more)
(+1608 files in other folders)
