[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.1"
PyYAML = "5.4.1"
Django = ">=3.1,<3.2"
wagtail = ">=2.10,<2.11"
django-cors-headers = "3.4.0"
django-allauth = "0.42.0"
django-crispy-forms = "1.9.2"
wagtail-blog = "2.3.5"
wagtail-metadata = "3.4.0"
easy-thumbnails = "2.7"
django-fsm = "2.7.1"
redis = "3.2.1"
stream-framework = "1.3.7"
django-countries = "6.1.3"
django-celery = "3.3.1"
django_phonenumbers = "1.0.1"
django-phonenumber-field = "5.0.0"
django-address = "0.2.5"
djangorestframework = "3.12.1"
django_compressor = "2.4"
django-user-agents = "0.4.0"
pygments = "2.10.0"
typing_extensions = "3.10.0.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "2.2"
pytest-django = "^4.4.0"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
